# AI-Hedge-Fund

./: .env.example  .gitignore  docker-compose.yml
.claude/: launch.json
apps/api/: pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: f96cf7661a66_initial_schema.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/agents/: base.py  fundamentals.py  output_schemas.py  risk_manager.py  sentiment.py  technicals.py  valuation.py
apps/api/app/agents/prompts/: fundamentals.py  risk_manager.py  sentiment.py  valuation.py
apps/api/app/db/: engine.py  init_db.py  types.py
apps/api/app/llm/: client.py  structured.py
apps/api/app/market_data/: mock_provider.py  models.py  provider.py
apps/api/app/models/: __init__.py  agent_output.py  eval_case.py  eval_result.py  final_signal.py  research_run.py
apps/api/app/repositories/: agent_output.py  eval.py  final_signal.py  research_run.py
apps/api/app/routes/: evals.py  research.py  signals.py
apps/api/app/schemas/: agents.py  evals.py  research.py  signals.py
apps/api/app/services/: signal_service.py
apps/api/app/worker/: executor.py  run_pipeline.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx
apps/web/src/app/alerts/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/final-signals/: page.tsx
apps/web/src/app/runs/: page.tsx
apps/web/src/components/: providers.tsx
apps/web/src/components/layout/: sidebar.tsx
apps/web/src/lib/: api.ts  types.ts
(+2 files in other folders)
